--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "@material-ui/lab": "4.0.0-alpha.60",
     "@material-ui/pickers": "3.3.10",
     "@material-ui/styles": "4.11.4",
+    "@mui/icons-material": "5.2.1",
+    "@mui/material": "5.2.3",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/styled-engine-sc": "5.1.0",
+    "@mui/styles": "5.2.3",
     "@reduxjs/toolkit": "1.6.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@types/fontfaceobserver": "0.0.6",
     "@types/jest": "26.0.23",
     "@types/node": "14.6.4",
-    "@types/react": "17.0.13",
-    "@types/react-dom": "17.0.8",
+    "@types/react": "17.0.37",
+    "@types/react-dom": "17.0.11",
     "@types/react-redux": "7.1.16",
     "@types/react-router-dom": "5.1.7",
     "@types/react-test-renderer": "17.0.1",
@@ -62,7 +67,7 @@
     "sanitize.css": "12.0.1",
     "serve": "12.0.0",
     "shelljs": "0.8.4",
-    "styled-components": "5.3.0",
+    "styled-components": "5.3.3",
     "stylelint": "13.13.1",
     "stylelint-config-recommended": "5.0.0",
     "stylelint-config-styled-components": "0.1.1",
@@ -71,6 +76,9 @@
     "typescript": "4.2.2",
     "web-vitals": "2.1.0",
     "yup": "0.32.11"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   },
   "scripts": {
     "start": "react-scripts start",
