--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.7.1",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
@@ -31,6 +32,7 @@
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.2",
     "@types/yup": "0.29.13",
+    "apexcharts": "3.32.1",
     "axios": "0.24.0",
     "chalk": "4.1.1",
     "clsx": "1.1.1",
@@ -52,6 +54,7 @@
     "plop": "2.7.4",
     "prettier": "2.3.2",
     "react": "17.0.2",
+    "react-apexcharts": "1.3.9",
     "react-app-polyfill": "2.0.0",
     "react-dom": "17.0.2",
     "react-helmet-async": "1.0.9",
@@ -95,7 +98,8 @@
     "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts",
     "cleanAndSetup": "ts-node --project=./internals/ts-node.tsconfig.json ./internals/scripts/clean.ts",
     "prettify": "prettier --write",
-    "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js"
+    "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js",
+    "backend": "json-server --watch db.json --port 5000 --delay=1000"
   },
   "eslintConfig": {
     "extends": "react-app"
