--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/fontfaceobserver": "0.0.6",
     "@types/jest": "26.0.23",
     "@types/node": "14.6.4",
+    "@types/numeral": "2.0.2",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
     "@types/react-redux": "7.1.16",
@@ -46,14 +47,19 @@
     "jest-styled-components": "7.0.4",
     "lint-staged": "10.3.0",
     "node-plop": "0.26.2",
+    "notistack": "2.0.3",
+    "numeral": "2.0.6",
     "plop": "2.7.4",
     "prettier": "2.3.2",
     "react": "17.0.2",
     "react-apexcharts": "1.3.9",
     "react-app-polyfill": "2.0.0",
     "react-dom": "17.0.2",
+    "react-dropzone": "11.5.3",
     "react-helmet-async": "1.0.9",
     "react-i18next": "11.11.1",
+    "react-perfect-scrollbar": "1.5.8",
+    "react-quill": "1.3.5",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
