--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "11.7.1",
+    "@fullcalendar/core": "5.11.0",
+    "@fullcalendar/daygrid": "5.11.0",
+    "@fullcalendar/interaction": "5.11.0",
+    "@fullcalendar/list": "5.11.0",
+    "@fullcalendar/react": "5.11.1",
+    "@fullcalendar/timegrid": "5.11.0",
+    "@fullcalendar/timeline": "5.11.0",
     "@mui/icons-material": "5.2.1",
+    "@mui/lab": "5.0.0-alpha.79",
     "@mui/material": "5.2.3",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@mui/styled-engine-sc": "5.1.0",
@@ -46,6 +54,7 @@
     "inquirer-directory": "2.2.0",
     "jest-styled-components": "7.0.4",
     "lint-staged": "10.3.0",
+    "moment": "2.29.3",
     "node-plop": "0.26.2",
     "notistack": "2.0.3",
     "numeral": "2.0.6",
